--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,29 +1,61 @@
 body {
-    height: 100vh;
-    width: 100vw;
-  }
-  
-  .container {
-    display: flex;
-    margin: 80px;
-  }
-  
-  .button-container {
-    padding: 30px;
-    padding-left: 60px;
-  }
-  
-  .display-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  row-gap: 30px;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.task1-container, .coin-game-container {
+  display: flex;
+  width: 80%;
+  margin-inline: auto;
+  background-color: rgb(170, 164, 164);
+}
+
+.button-container {
+  padding: 28px;
+  padding-left: 60px;
+  align-items: center;
+}
+
+.display-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 button {
-  padding: 7px 25px;
-  width: 80px;
-  border: none;
-  color: white;
-  background-color: rgb(73, 73, 73);
+padding: 7px 25px;
+width: max-content;
+border: none;
+color: white;
+background-color: rgb(73, 73, 73);
+cursor: pointer;
+height: max-content;
+}
+
+.coin-game-container {
+background: #fff;
+border: 3px solid green;
+border-radius: 8px;
+padding: 25px;
+display: flex;
+justify-content: space-between;
+}
+.computer, .player {
+display: flex;
+flex-direction: column;
+row-gap: 40px;
+border-right: 2px solid;
+padding-right: 20px;
+}
+.player {
+border-right: none;
+border-left: 2px solid;
+padding-left: 20px;
 }
